<resources>
    <string name="app_name">AUR audio recorder</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="preferencias">Preferencias</string>
    <string name="lista">Lista</string>
    <string name="acercaDeText">Desarrollado por bitbugs, en el marco del proyecto de 2do año del programa b_IT.\nbitbugs está conformado por Jorge Arcelus, Rafael Burgueño y Soledad Echinope.</string>
    <string name="tipsText">En esta ventana se ven diferentes sugerencias de uso de la aplicación, para que los usuarios puedan aprovechar mejor las capacidades de la aplicación.</string>
    <string name="no_se_encontraron_grabaciones">No se encontraron grabaciones.</string>
    <string name="reproducir">reproducir</string>
    <string name="pausar">Pausar</string>
    <string name="grabar">Grabar</string>
    <string name="detener">Detener</string>
    <string name="lista_grabaciones_title">Lista de grabaciones</string>
    <string name="apariencia">Apariencia</string>
    <string name="opciones_de_grabacion">Opciones de grabación</string>
    <string name="tema_oscuro">Tema oscuro</string>
    <string name="tema_oscuro_summary">Cambiar la apariencia de la aplicación a tema oscuro.</string>
    <string name="formato_archivo">Formato de archivo</string>
    <string name="formato_archivo_summary">Elegir el formato de archivo de la grabación.</string>
    <string name="tasa_muestreo">Tasa de muestreo</string>
    <string name="tasa_muestreo_summary">Elegir la tasa de muestreo para la grabación.</string>
    <string name="todas">Todas</string>
    <string name="categorias">Categorías</string>
    <string name="renombrar">Renombrar</string>
    <string name="compartir">Compartir</string>
    <string name="adjuntar_nota">Adjuntar nota</string>
    <string name="etiquetar">Etiquetar</string>
    <string name="mas_opciones">Más opciones</string>
    <string name="grabacion_guardada">La grabación fue guardada con éxito.</string>
    <string name="permisos_concedidos">Se concedieron los permisos a AUR audio recorder.</string>
    <string name="explicar_permisos">AUR audio recorder no puede funcionar sin los permisos solicitados. Saliendo de la aplicación.</string>
    <string name="grabando">Grabando…</string>
    <string name="grabacion_detenida">Grabación detenida</string>
    <string name="pausado">Pausado</string>
    <string name="reproduciendo">Reproduciendo.</string>
    <string name="desea_borrar">¿Borrar el archivo</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar_grabacion">¿Borrar grabación</string>
    <string name="se_eligio_borrar">Se eligió BORRAR</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="modo_claro">Modo claro</string>
    <string name="no_borrar">Se canceló el borrado</string>
    <string name="se_eligio_adjuntar_nota">Se eligió AGREGAR NOTA</string>
    <string name="se_eligio_etiquetar">Se eligió ETIQUETAR</string>
    <string name="nueva_nota">Nueva nota</string>
    <string name="escriba_nota">Escriba la nota</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="clases">Clases</string>
    <string name="entrevistas">Entrevistas</string>
    <string name="favoritos">Favoritos</string>
    <string name="notas_personales">Notas personales</string>
</resources>
