<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionRenombrar"
        android:orderInCategory="5"
        android:title="@string/renombrar"
        app:showAsAction="never|withText">
    </item>

    <item
        android:id="@+id/actionCompartir"
        android:orderInCategory="10"
        android:title="@string/compartir"
        app:showAsAction="never|withText">
    </item>

    <item
        android:id="@+id/actionEliminar"
        android:orderInCategory="15"
        android:title="@string/borrar"
        app:showAsAction="never|withText"></item>

    <item
        android:id="@+id/actionAdjuntarNota"
        android:orderInCategory="20"
        android:title="@string/adjuntar_nota"
        app:showAsAction="never|withText">
    </item>

    <item
        android:id="@+id/actionEtiquetar"
        android:orderInCategory="25"
        android:title="@string/etiquetar"
        app:showAsAction="never|withText">
        <menu>
            <item
                android:id="@+id/tagClases"
                android:title="@string/clases" />
            <item
                android:id="@+id/tagEntrevistas"
                android:title="@string/entrevistas" />
            <item
                android:id="@+id/tagFavoritos"
                android:title="@string/favoritos" />
            <item
                android:id="@+id/tagNotasPersonales"
                android:title="@string/notas_personales" />

        </menu>

    </item>

</menu>