<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionLista"
        android:title="@string/lista"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/actionPreferencias"
        android:orderInCategory="5"
        android:title="@string/preferencias"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/actionTips"
        android:orderInCategory="10"
        android:title="@string/sugerencias"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/actionAcercaDe"
        android:orderInCategory="15"
        android:title="@string/acerca_de"
        app:showAsAction="never|withText" />

</menu>