<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".RecordingListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/listaTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTodas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabCategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorias" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecordings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listaTabs"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewNoRecordings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:lineSpacingExtra="10sp"
        android:text="@string/no_se_encontraron_grabaciones"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />


</RelativeLayout>
