<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_ActivityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearLayoutRecorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/chronometerTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0.3"
            android:textSize="60sp" />

        <LinearLayout
            android:id="@+id/linearLayoutPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageViewPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/reproducir"
                android:focusable="true"
                android:src="@drawable/ic_play"
                android:tint="?attr/colorPrimary" />

            <ImageView
                android:id="@+id/imageViewPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/pausar"
                android:focusable="true"
                android:src="@drawable/ic_pause"
                android:tint="?attr/colorPrimary"
                android:visibility="gone" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewRecord"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="clip_vertical|top"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/grabar"
                android:focusable="true"
                android:padding="20dp"
                android:src="@drawable/ic_microphone" />

            <ImageView
                android:id="@+id/imageViewStop"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/detener"
                android:focusable="true"
                android:src="@drawable/ic_stop"
                android:tint="?attr/colorPrimary"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
